--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "router": "^1.3.6",
     "stripe": "^8.218.0",
     "uuid": "^8.3.2"
+  },
+  "engines" : { 
+    "npm" : "9.1.2",
+    "node" : "v16.14.2"
   }
 }
